feat: Safe App support

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@mui/material": "6.1.6",
     "@mui/material-nextjs": "6.1.6",
     "@rainbow-me/rainbowkit": "2.2.4",
+    "@safe-global/safe-apps-react-sdk": "^4.7.2",
+    "@safe-global/safe-apps-sdk": "^9.1.0",
     "@sentry/nextjs": "9.25.1",
     "@tanstack/react-query": "5.56.2",
     "@vercel/analytics": "1.5.0",
@@ -55,9 +57,9 @@
     "@eslint/compat": "1.2.4",
     "@eslint/eslintrc": "3.1.0",
     "@jest/globals": "29.7.0",
+    "@next/eslint-plugin-next": "15.3.3",
     "@playwright/test": "1.52.0",
     "@synthetixio/synpress": "4.1.0",
-    "@next/eslint-plugin-next": "15.3.3",
     "@types/jest": "29.5.12",
     "@types/jsdom": "21.1.7",
     "@types/lodash.merge": "4.6.7",
