--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.14.0",
-    "@fatsolutions/privacy-pools-core-starknet-sdk": "link:../privacy-pools-starknet/packages/sdk",
+    "@fatsolutions/privacy-pools-core-starknet-sdk": "^0.0.10",
     "@fontsource/ibm-plex-mono": "5.1.0",
     "@mui/icons-material": "6.1.6",
     "@mui/material": "6.1.6",
