--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": ">=18.17.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "pnpm run lint:fix && next build",
     "start": "next start",
     "preview": "next start",
@@ -29,12 +30,12 @@
     "src/**/*.{js,jsx,ts,tsx,css,scss,md,html}": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@0xbow/privacy-pools-core-sdk": "0.1.22",
     "@carbon/icons-react": "11.52.0",
     "@emotion/cache": "11.13.1",
     "@emotion/react": "11.14.0",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.14.0",
+    "@fatsolutions/privacy-pools-core-starknet-sdk": "^0.0.26",
     "@fontsource/ibm-plex-mono": "5.1.0",
     "@mui/icons-material": "6.1.6",
     "@mui/material": "6.1.6",
@@ -43,36 +44,40 @@
     "@safe-global/safe-apps-react-sdk": "^4.7.2",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@sentry/nextjs": "9.25.1",
+    "@starknet-react/chains": "^4.0.3",
+    "@starknet-react/core": "^4.0.3",
     "@tanstack/react-query": "5.56.2",
     "@vercel/analytics": "1.5.0",
-    "next": "15.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "import-in-the-middle": "^1.14.2",
+    "next": "15.5.3",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-router-dom": "6.26.2",
-    "viem": "2.23.5",
-    "wagmi": "2.14.12"
+    "require-in-the-middle": "^7.5.2",
+    "starknet": "^7.6.4",
+    "viem": "2.23.5"
   },
   "devDependencies": {
     "@defi-wonderland/crypto-husky-checks": "1.5.6",
     "@eslint/compat": "1.2.4",
     "@eslint/eslintrc": "3.1.0",
     "@jest/globals": "29.7.0",
-    "@next/eslint-plugin-next": "15.3.3",
+    "@next/eslint-plugin-next": "15.5.3",
     "@playwright/test": "1.52.0",
     "@synthetixio/synpress": "4.1.0",
     "@types/jest": "29.5.12",
     "@types/jsdom": "21.1.7",
     "@types/lodash.merge": "4.6.7",
     "@types/node": "22.7.4",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
     "@types/zxcvbn": "4.4.5",
     "@typescript-eslint/eslint-plugin": "8.7.0",
     "@typescript-eslint/parser": "8.7.0",
     "cypress": "13.15.0",
     "dotenv": "16.5.0",
     "eslint": "9.11.1",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-import": "2.31.0",
@@ -92,10 +97,21 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.0.2",
-      "@types/react-dom": "19.0.2",
+      "@types/react": "19.1.13",
+      "@types/react-dom": "19.1.9",
       "@babel/runtime@<7.26.10": ">=7.26.10",
       "@babel/helpers@<7.26.10": ">=7.26.10"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@carbon/icon-helpers",
+      "@carbon/icons-react",
+      "@sentry/cli",
+      "bufferutil",
+      "cypress",
+      "esbuild",
+      "keccak",
+      "sharp",
+      "utf-8-validate"
+    ]
   }
 }
